tests/machine/x/fs/str_builtin.fs
open System

printfn "%A" (str 123)
